Add toggle to switch between edit and preview modes along with other minor changes to the styling

--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -7,6 +7,11 @@
   flex-direction: column;
 }
 
+#experience-form,
+#education-form {
+  gap: 20px;
+}
+
 .experience,
 .education {
   display: grid;
