--- a/src/styles/LayoutOne.css
+++ b/src/styles/LayoutOne.css
@@ -1,29 +1,58 @@
 #layout-one {
-  height: 100%;
+  min-height: 100%;
   background-color: white;
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 5fr;
-  gap: 2%;
-  margin: 4%;
+  grid-template-rows: 200px 5fr;
 }
 
 #layout-one > header {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: grey;
   grid-column: 1 / -1;
+  box-sizing: border-box;
+  padding: 0 20px;
+}
+
+#layout-one > header > img {
+  height: 90%;
+}
+
+#layout-one > header > #name-and-role-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
+
+#layout-one > header .header-name {
+  font-size: 34px;
+}
+
+#layout-one > header .header-role {
+  font-size: 28px;
 }
 
 #layout-one > aside {
   background-color: lightgrey;
   grid-column: 1;
   padding: 5%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+#layout-one > aside > section > p {
+  margin-top: 5px;
 }
 
 #layout-one > main {
   grid-column: 2;
-  padding: 2.5%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  padding: 0 25px;
 }
