--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,9 +1,10 @@
-.app {
-  height: 100vh;
+.main-header {
   display: flex;
-  flex-direction: column;
-}
-
-datalist {
-  position: absolute;
+  justify-content: space-between;
+  align-items: center;
+  background-color: red;
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+  padding: 0 30px;
 }
