--- a/src/styles/Preview.css
+++ b/src/styles/Preview.css
@@ -1,6 +1,6 @@
 #preview-container {
-  flex: 1;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: darkcyan;
