--- a/src/styles/LayoutOne.css
+++ b/src/styles/LayoutOne.css
@@ -38,7 +38,7 @@
 #layout-one > aside {
   background-color: lightgrey;
   grid-column: 1;
-  padding: 5%;
+  padding: 15px;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -54,5 +54,5 @@
   flex-direction: column;
   gap: 20px;
   box-sizing: border-box;
-  padding: 0 25px;
+  padding: 15px;
 }
